--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
 		{
 			"name": "Patrik Votoček",
 			"homepage": "http://patrik.votocek.cz"
-		}
+		},
 		{
 			"name": "Tomáš Votruba",
 			"homepage": "http://www.sleeper.cz/"
@@ -15,5 +15,9 @@
 	],
 	"autoload": {
 		"classmap": ["NetteTranslator/"]
+	},
+	"require": {
+		"php": ">=5.3.0",
+		"nette/nette": ">=2.0.0"
 	}
 }
